--- a/stetho/build.gradle
+++ b/stetho/build.gradle
@@ -6,10 +6,10 @@ android {
     defaultConfig {
         minSdkVersion MIN_SDK_VERSION
         targetSdkVersion TARGET_SDK_VERSION
-        versionCode 3
-        versionName "3.0.1"
+        versionCode 4
+        versionName "3.1.1"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
     buildTypes {
@@ -21,11 +21,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    provided 'com.android.support:support-annotations:' + SUPPORT_LIBRARY_VERSION
-    compile 'com.lazy.logging:library:1.3.0'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.annotation:annotation:1.1.0'
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0')
+    implementation 'com.github.iflove:Logcat:2.1.2'
+    testImplementation 'junit:junit:4.13'
 }
